...
    <string name="hint_password">Password</string>
    <string name="hint_user_name">Username</string>
    <string name="hint_search">Search</string>
    <string name="hint_tweet_text">What\'s Up?</string>

    <string name="button_login">Login</string>
    <string name="button_signup">Signup</string>
    <string name="button_apply">Continue</string>
    <string name="button_logout">Logout</string>

    <string name="text_signup">No Account? Go to Signup</string>
    <string name="text_login">Already have an account? Go to Login</string>
    <string name="desc_post_an_image">Post an Image</string>

    <string name="empty_msg">You do not have any posted tweets</string>

</resources>
