...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_32"
                    android:text="@string/login" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/signUp"
                    style="@style/linkText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_16"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/text_signup" />
...
